sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:25: error: ')' expected but '}' found.
  }
  ^